# MPI

./: CMakeLists.txt  README.md
doc/: semi01_mai.rtf  tasks.txt
src/: 2d_integrate.c  3d_integrate.c  matrix_multiply.c  sum.c  tridiagonal.c
